--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -10,23 +10,31 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70833b92",
+   "id": "3958581f",
    "metadata": {},
    "source": [
     "Why: This is fundamental to any data science project and showcases essential skills. Before complex analysis, I need to understand and visualize the data. (almost introducing it)\n",
     "\n",
     "How:\n",
-    "Load the JSON data (using pandas in analysisJson.py ).\n",
-    "Clean and process the data (handle missing values if any, ensure correct data types).\n",
+    " Load the JSON data (using pandas in analysisJson.py ).\n",
+    " Clean and process the data (handle missing values if any, ensure correct data types).\n",
     "\n",
-    "Create visualizations (using libraries like Matplotlib or Seaborn):\n",
-    "Plot hourly temperature, wind speed, and humidity trends over the forecast period.\n",
-    "Visualize daily max/min temperatures.\n",
-    "Show precipitation probability or amount over time.\n",
-    "Analyze wind direction patterns.\n",
+    "- Create visualizations (using libraries like Matplotlib or Seaborn):\n",
+    "- Plot hourly temperature, wind speed, and humidity trends over the forecast period.\n",
+    "- Visualize daily max/min temperatures.\n",
+    "- Show precipitation probability or amount over time.\n",
+    "- Analyze wind direction patterns.\n",
     "\n",
     " Value: Demonstrates data handling, cleaning, and the crucial ability to extract insights through visualization."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b216749a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
