json unfolded, no missing values, celaning data

--- a/Analysis/EDA.ipynb
+++ b/Analysis/EDA.ipynb
@@ -29,17 +29,36 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "abfc76aa",
+   "cell_type": "markdown",
+   "id": "5dae53c3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Key Features to Implement:\n",
+    "\n",
+    "    Data Loading & Cleaning:\n",
+    "\n",
+    "        Read JSON into pandas DataFrame : DONE\n",
+    "        Handle missing values\n",
+    "        Convert data types (timestamps, numeric values)\n",
+    "\n",
+    "    Exploratory Analysis:\n",
+    "\n",
+    "        Basic statistics (mean, min, max for key metrics)\n",
+    "        Time series decomposition (trend, seasonality)\n",
+    "\n",
+    "Biking Conditions Analysis:\n",
+    "\n",
+    "    Implement configurable thresholds (temperature, wind, precipitation)\n",
+    "    Calculate \"bikeability score\" for each time period\n",
+    "    Identify optimal biking windows\n",
+    "    \n",
+    "    Visual dashboard (using Plotly Dash or similar)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -53,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
