--- a/Analysis/EDA.ipynb
+++ b/Analysis/EDA.ipynb
@@ -38,8 +38,8 @@
     "    Data Loading & Cleaning:\n",
     "\n",
     "        Read JSON into pandas DataFrame : DONE\n",
-    "        Handle missing values\n",
-    "        Convert data types (timestamps, numeric values)\n",
+    "        Handle missing values : DONE\n",
+    "        Convert data types (timestamps, numeric values)  : DONE\n",
     "\n",
     "    Exploratory Analysis:\n",
     "\n",
